<package>
  <name>pr2_point</name>
  <version>0.0.0</version>
  <description>The pr2_point package</description>

  <maintainer email="mcakmak@cs.washington.edu">Maya Cakmak</maintainer>
  <author>Maya Cakmak</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/pr2_point</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>

</package>


